--- a/chat-system/package.json
+++ b/chat-system/package.json
@@ -16,10 +16,13 @@
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@tanstack/react-table": "^8.20.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "express": "^4.21.0",
     "framer-motion": "^11.10.0",
     "lucide-react": "^0.447.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.14",
     "react": "^18",
     "react-dom": "^18",
