--- a/chat-system/package.json
+++ b/chat-system/package.json
@@ -21,10 +21,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "express": "^4.21.0",
+    "formidable": "^3.5.1",
     "framer-motion": "^11.10.0",
     "lucide-react": "^0.447.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.14",
+    "next-connect": "^1.0.0-next.4",
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.8.0",
@@ -35,6 +37,8 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^20.16.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
