--- a/chat-system/package.json
+++ b/chat-system/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "express": "^4.21.0",
     "formidable": "^3.5.1",
     "framer-motion": "^11.10.0",
@@ -27,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.2.14",
     "next-connect": "^1.0.0-next.4",
+    "node-rsa": "^1.1.1",
     "react": "^18",
     "react-dom": "^18",
     "socket.io": "^4.8.0",
