--- a/chat-system/package.json
+++ b/chat-system/package.json
@@ -24,6 +24,7 @@
     "express": "^4.21.0",
     "formidable": "^3.5.1",
     "framer-motion": "^11.10.0",
+    "jsencrypt": "^3.3.2",
     "lucide-react": "^0.447.0",
     "multer": "^1.4.5-lts.1",
     "next": "14.2.14",
@@ -39,9 +40,11 @@
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@types/formidable": "^3.4.5",
     "@types/multer": "^1.4.12",
     "@types/node": "^20.16.10",
+    "@types/node-rsa": "^1.1.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/ws": "^8.5.12",
